Fix menu overflow

--- a/public/web/theme/main/stylesheet/stylec788.css
+++ b/public/web/theme/main/stylesheet/stylec788.css
@@ -11438,6 +11438,10 @@ h2.title-line {
     margin: 0px auto;
 }
 
+.banner_owl {
+    z-index: 0;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
